[gd_scene load_steps=12 format=3 uid="uid://d6rb73483hdv"]

[ext_resource type="Script" path="res://scenes/card.gd" id="1_hxnsa"]
[ext_resource type="Texture2D" uid="uid://dlsypbmbas2sw" path="res://assets/card back.png" id="2_a3is7"]
[ext_resource type="Texture2D" uid="uid://d0t22ao54tdic" path="res://assets/leaf.png" id="3_dsr6t"]
[ext_resource type="Texture2D" uid="uid://bounkok81xbeh" path="res://assets/Carbon_dioxide_3D_ball.png" id="4_dgom4"]
[ext_resource type="Texture2D" uid="uid://c3mxbho3kbywc" path="res://assets/celesitial-card.png" id="5_sqdpl"]

[sub_resource type="Animation" id="Animation_foetp"]
resource_name = "hide"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardDetails")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardBack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show"
}]
}

[sub_resource type="Animation" id="Animation_sa5su"]
resource_name = "reveal"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardDetails")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardBack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e7xk7"]
_data = {
"hide": SubResource("Animation_foetp"),
"reveal": SubResource("Animation_sa5su")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h40nd"]
size = Vector2(10, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4fdu0"]
size = Vector2(83, 125)

[sub_resource type="LabelSettings" id="LabelSettings_87nrr"]
font_size = 10
font_color = Color(0, 0, 0, 1)

[node name="Card" type="Node2D" groups=["cards"]]
script = ExtResource("1_hxnsa")

[node name="CardBack" type="Node2D" parent="."]

[node name="CardBack2" type="Sprite2D" parent="CardBack"]
texture = ExtResource("2_a3is7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e7xk7")
}

[node name="DragArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="DragAreaCollision" type="CollisionShape2D" parent="DragArea"]
unique_name_in_owner = true
position = Vector2(-1, 2.5)
shape = SubResource("RectangleShape2D_h40nd")

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_4fdu0")

[node name="CardDetails" type="Node2D" parent="."]
visible = false

[node name="Leaf" type="Sprite2D" parent="CardDetails"]
unique_name_in_owner = true
visible = false
position = Vector2(-1, -12)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_dsr6t")

[node name="CarbonDioxide" type="Sprite2D" parent="CardDetails"]
unique_name_in_owner = true
visible = false
position = Vector2(-1, -15)
scale = Vector2(0.04, 0.04)
texture = ExtResource("4_dgom4")

[node name="CelestialCard" type="Sprite2D" parent="CardDetails"]
unique_name_in_owner = true
visible = false
texture = ExtResource("5_sqdpl")

[node name="Label" type="Label" parent="CardDetails"]
offset_left = -35.0
offset_top = 37.0
offset_right = 40.0
offset_bottom = 60.0
text = "Change me"
label_settings = SubResource("LabelSettings_87nrr")
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[connection signal="body_entered" from="DragArea" to="." method="_on_drag_area_body_entered"]
[connection signal="body_exited" from="DragArea" to="." method="_on_drag_area_body_exited"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_click_area_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_click_area_mouse_exited"]
